@@ -1,6 +1,6 @@
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = conv src data
+SUBDIRS = conv src data tests
 
 MAINTAINERCLEANFILES = Makefile.in
 
